deploy/searxng/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  ports:
    - port: 8080
  selector:
    app: searxng
  type: ClusterIP
